scratch/grammar/rift.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 41
#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_UnicodeEscape(yycontext *yy); /* 41 */
YY_RULE(int) yy_OctalEscape(yycontext *yy); /* 40 */
YY_RULE(int) yy_StringLiteral(yycontext *yy); /* 39 */
YY_RULE(int) yy_Escape(yycontext *yy); /* 38 */
YY_RULE(int) yy_CharLiteral(yycontext *yy); /* 37 */
YY_RULE(int) yy_HexDigit(yycontext *yy); /* 36 */
YY_RULE(int) yy_BinaryExponent(yycontext *yy); /* 35 */
YY_RULE(int) yy_HexSignificand(yycontext *yy); /* 34 */
YY_RULE(int) yy_Exponent(yycontext *yy); /* 33 */
YY_RULE(int) yy_Digits(yycontext *yy); /* 32 */
YY_RULE(int) yy_DecimalFloat(yycontext *yy); /* 31 */
YY_RULE(int) yy_HexFloat(yycontext *yy); /* 30 */
YY_RULE(int) yy_FloatLiteral(yycontext *yy); /* 29 */
YY_RULE(int) yy_HexDigits(yycontext *yy); /* 28 */
YY_RULE(int) yy_DecimalNumeral(yycontext *yy); /* 27 */
YY_RULE(int) yy_OctalNumeral(yycontext *yy); /* 26 */
YY_RULE(int) yy_BinaryNumeral(yycontext *yy); /* 25 */
YY_RULE(int) yy_HexNumeral(yycontext *yy); /* 24 */
YY_RULE(int) yy_Boolean(yycontext *yy); /* 23 */
YY_RULE(int) yy_Number(yycontext *yy); /* 22 */
YY_RULE(int) yy_String(yycontext *yy); /* 21 */
YY_RULE(int) yy_List(yycontext *yy); /* 20 */
YY_RULE(int) yy_AnonFunc(yycontext *yy); /* 19 */
YY_RULE(int) yy_AnonRift(yycontext *yy); /* 18 */
YY_RULE(int) yy_BooleanOp(yycontext *yy); /* 17 */
YY_RULE(int) yy_CompareOp(yycontext *yy); /* 16 */
YY_RULE(int) yy_BitwiseOp(yycontext *yy); /* 15 */
YY_RULE(int) yy_MathOp(yycontext *yy); /* 14 */
YY_RULE(int) yy_Tuple(yycontext *yy); /* 13 */
YY_RULE(int) yy_Literal(yycontext *yy); /* 12 */
YY_RULE(int) yy_BinaryOp(yycontext *yy); /* 11 */
YY_RULE(int) yy_FuncApply(yycontext *yy); /* 10 */
YY_RULE(int) yy_Assignment(yycontext *yy); /* 9 */
YY_RULE(int) yy_EndScope(yycontext *yy); /* 8 */
YY_RULE(int) yy_Expr(yycontext *yy); /* 7 */
YY_RULE(int) yy_StartScope(yycontext *yy); /* 6 */
YY_RULE(int) yy_Scope(yycontext *yy); /* 5 */
YY_RULE(int) yy_Id(yycontext *yy); /* 4 */
YY_RULE(int) yy_Whitespace(yycontext *yy); /* 3 */
YY_RULE(int) yy_Rift(yycontext *yy); /* 2 */
YY_RULE(int) yy_Source(yycontext *yy); /* 1 */


YY_RULE(int) yy_UnicodeEscape(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "UnicodeEscape"));  if (!yymatchChar(yy, 'u')) goto l1;
  l2:;	
  {  int yypos3= yy->__pos, yythunkpos3= yy->__thunkpos;  if (!yymatchChar(yy, 'u')) goto l3;  goto l2;
  l3:;	  yy->__pos= yypos3; yy->__thunkpos= yythunkpos3;
  }  if (!yy_HexDigit(yy)) goto l1;  if (!yy_HexDigit(yy)) goto l1;  if (!yy_HexDigit(yy)) goto l1;  if (!yy_HexDigit(yy)) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "UnicodeEscape", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "UnicodeEscape", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_OctalEscape(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "OctalEscape"));
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\017\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;  goto l5;
  l6:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;  goto l5;
  l7:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l4;
  }
  l5:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "OctalEscape", yy->__buf+yy->__pos));
  return 1;
  l4:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OctalEscape", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_StringLiteral(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "StringLiteral"));  if (!yymatchChar(yy, '\"')) goto l8;
  l9:;	
  {  int yypos10= yy->__pos, yythunkpos10= yy->__thunkpos;
  {  int yypos11= yy->__pos, yythunkpos11= yy->__thunkpos;  if (!yy_Escape(yy)) goto l12;  goto l11;
  l12:;	  yy->__pos= yypos11; yy->__thunkpos= yythunkpos11;
  {  int yypos13= yy->__pos, yythunkpos13= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\044\000\000\004\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l13;  goto l10;
  l13:;	  yy->__pos= yypos13; yy->__thunkpos= yythunkpos13;
  }  if (!yymatchDot(yy)) goto l10;
  }
  l11:;	  goto l9;
  l10:;	  yy->__pos= yypos10; yy->__thunkpos= yythunkpos10;
  }  if (!yymatchChar(yy, '\"')) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "StringLiteral", yy->__buf+yy->__pos));
  return 1;
  l8:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "StringLiteral", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Escape(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Escape"));  if (!yymatchChar(yy, '\\')) goto l14;
  {  int yypos15= yy->__pos, yythunkpos15= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\204\000\000\000\000\000\000\020\104\100\024\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l16;  goto l15;
  l16:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;  if (!yy_OctalEscape(yy)) goto l17;  goto l15;
  l17:;	  yy->__pos= yypos15; yy->__thunkpos= yythunkpos15;  if (!yy_UnicodeEscape(yy)) goto l14;
  }
  l15:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Escape", yy->__buf+yy->__pos));
  return 1;
  l14:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Escape", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_CharLiteral(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "CharLiteral"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l18;
  {  int yypos19= yy->__pos, yythunkpos19= yy->__thunkpos;  if (!yy_Escape(yy)) goto l20;  goto l19;
  l20:;	  yy->__pos= yypos19; yy->__thunkpos= yythunkpos19;
  {  int yypos21= yy->__pos, yythunkpos21= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l21;  goto l18;
  l21:;	  yy->__pos= yypos21; yy->__thunkpos= yythunkpos21;
  }  if (!yymatchDot(yy)) goto l18;
  }
  l19:;	  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l18;
  yyprintf((stderr, "  ok   %s @ %s\n", "CharLiteral", yy->__buf+yy->__pos));
  return 1;
  l18:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CharLiteral", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_HexDigit(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "HexDigit"));
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l24;  goto l23;
  l24:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  goto l23;
  l25:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l22;
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "HexDigit", yy->__buf+yy->__pos));
  return 1;
  l22:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "HexDigit", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_BinaryExponent(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "BinaryExponent"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\000\000\001\000\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;
  {  int yypos27= yy->__pos, yythunkpos27= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\050\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;  goto l28;
  l27:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;
  }
  l28:;	  if (!yy_Digits(yy)) goto l26;
  yyprintf((stderr, "  ok   %s @ %s\n", "BinaryExponent", yy->__buf+yy->__pos));
  return 1;
  l26:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BinaryExponent", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_HexSignificand(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "HexSignificand"));
  {  int yypos30= yy->__pos, yythunkpos30= yy->__thunkpos;
  {  int yypos32= yy->__pos, yythunkpos32= yy->__thunkpos;  if (!yymatchString(yy, "0x")) goto l33;  goto l32;
  l33:;	  yy->__pos= yypos32; yy->__thunkpos= yythunkpos32;  if (!yymatchString(yy, "0X")) goto l31;
  }
  l32:;	
  {  int yypos34= yy->__pos, yythunkpos34= yy->__thunkpos;  if (!yy_HexDigits(yy)) goto l34;  goto l35;
  l34:;	  yy->__pos= yypos34; yy->__thunkpos= yythunkpos34;
  }
  l35:;	  if (!yymatchChar(yy, '.')) goto l31;  if (!yy_HexDigits(yy)) goto l31;  goto l30;
  l31:;	  yy->__pos= yypos30; yy->__thunkpos= yythunkpos30;  if (!yy_HexNumeral(yy)) goto l29;
  {  int yypos36= yy->__pos, yythunkpos36= yy->__thunkpos;  if (!yymatchChar(yy, '.')) goto l36;  goto l37;
  l36:;	  yy->__pos= yypos36; yy->__thunkpos= yythunkpos36;
  }
  l37:;	
  }
  l30:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "HexSignificand", yy->__buf+yy->__pos));
  return 1;
  l29:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "HexSignificand", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Exponent(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Exponent"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\040\000\000\000\040\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l38;
  {  int yypos39= yy->__pos, yythunkpos39= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\050\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l39;  goto l40;
  l39:;	  yy->__pos= yypos39; yy->__thunkpos= yythunkpos39;
  }
  l40:;	  if (!yy_Digits(yy)) goto l38;
  yyprintf((stderr, "  ok   %s @ %s\n", "Exponent", yy->__buf+yy->__pos));
  return 1;
  l38:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Exponent", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_Digits(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "Digits"));  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l41;
  l42:;	
  {  int yypos43= yy->__pos, yythunkpos43= yy->__thunkpos;
  l44:;	
  {  int yypos45= yy->__pos, yythunkpos45= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l45;  goto l44;
  l45:;	  yy->__pos= yypos45; yy->__thunkpos= yythunkpos45;
  }  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l43;  goto l42;
  l43:;	  yy->__pos= yypos43; yy->__thunkpos= yythunkpos43;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Digits", yy->__buf+yy->__pos));
  return 1;
  l41:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Digits", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_DecimalFloat(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "DecimalFloat"));
  {  int yypos47= yy->__pos, yythunkpos47= yy->__thunkpos;  if (!yy_Digits(yy)) goto l48;  if (!yymatchChar(yy, '.')) goto l48;
  {  int yypos49= yy->__pos, yythunkpos49= yy->__thunkpos;  if (!yy_Digits(yy)) goto l49;  goto l50;
  l49:;	  yy->__pos= yypos49; yy->__thunkpos= yythunkpos49;
  }
  l50:;	
  {  int yypos51= yy->__pos, yythunkpos51= yy->__thunkpos;  if (!yy_Exponent(yy)) goto l51;  goto l52;
  l51:;	  yy->__pos= yypos51; yy->__thunkpos= yythunkpos51;
  }
  l52:;	
  {  int yypos53= yy->__pos, yythunkpos53= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\120\000\000\000\120\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l53;  goto l54;
  l53:;	  yy->__pos= yypos53; yy->__thunkpos= yythunkpos53;
  }
  l54:;	  goto l47;
  l48:;	  yy->__pos= yypos47; yy->__thunkpos= yythunkpos47;  if (!yymatchChar(yy, '.')) goto l55;  if (!yy_Digits(yy)) goto l55;
  {  int yypos56= yy->__pos, yythunkpos56= yy->__thunkpos;  if (!yy_Exponent(yy)) goto l56;  goto l57;
  l56:;	  yy->__pos= yypos56; yy->__thunkpos= yythunkpos56;
  }
  l57:;	
  {  int yypos58= yy->__pos, yythunkpos58= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\120\000\000\000\120\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l58;  goto l59;
  l58:;	  yy->__pos= yypos58; yy->__thunkpos= yythunkpos58;
  }
  l59:;	  goto l47;
  l55:;	  yy->__pos= yypos47; yy->__thunkpos= yythunkpos47;  if (!yy_Digits(yy)) goto l60;  if (!yy_Exponent(yy)) goto l60;
  {  int yypos61= yy->__pos, yythunkpos61= yy->__thunkpos;  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\120\000\000\000\120\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l61;  goto l62;
  l61:;	  yy->__pos= yypos61; yy->__thunkpos= yythunkpos61;
  }
  l62:;	  goto l47;
  l60:;	  yy->__pos= yypos47; yy->__thunkpos= yythunkpos47;  if (!yy_Digits(yy)) goto l46;
  {  int yypos63= yy->__pos, yythunkpos63= yy->__thunkpos;  if (!yy_Exponent(yy)) goto l63;  goto l64;
  l63:;	  yy->__pos= yypos63; yy->__thunkpos= yythunkpos63;
  }
  l64:;	  if (!yymatchClass(yy, (unsigned char *)"\000\000\000\000\000\000\000\000\120\000\000\000\120\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l46;
  }
  l47:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "DecimalFloat", yy->__buf+yy->__pos));
  return 1;
  l46:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DecimalFloat", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_HexFloat(yycontext *yy)
